--- a/ios/VKSmokeQuitSkeleton/Info.plist
+++ b/ios/VKSmokeQuitSkeleton/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>VKSmokeQuitSkeleton</string>
+	<string>VKSmokeQuit</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
